2007-01-18  Takeshi Abe  <tabe@fixedpoint.jp>

	* release 0.1.1

	* file/magic.scm (<magic-error>): adopted a spec change of define-condition-type
	with Gauche 0.8.8.

2006-12-20  Takeshi Abe  <tabe@fixedpoint.jp>

	* file_magic.c (fileMagicRaiseCondition): avoided passing NULL as
	a message.

2006-12-11  Takeshi Abe  <tabe@fixedpoint.jp>

	* doc/reference.scm: mentioned the return values of magic-open and
	magic-file on error.

	* file_magiclib.stub (magic-open, magic-file): treated the return value
	of type 'maybe'.

2006-12-06  Takeshi Abe  <tabe@fixedpoint.jp>

	* release 0.1.0.
