@@ -1,3 +1,8 @@
+2007-11-10  Takeshi Abe  <tabe@fixedpoint.jp>
+
+	* file_magic.h: inlude gauche.h before other headers possibly
+	concerned with Linux's Large File Support.
+
 2007-01-18  Takeshi Abe  <tabe@fixedpoint.jp>
 
 	* release 0.1.1
